[package]
name = "frame-rate"
version = "0.2.0"
authors = ["Marc-Antoine Arnaud <marc-antoine.arnaud@luminvent.com"]
description = """
library to manipulate video frame rate
"""
repository = "https://github.com/media-io/frame-rate"
documentation = "https://docs.rs/frame-rate"
readme = "README.md"
keywords = ["video", "SMPTE"]
license = "MIT"
edition = "2018"

[dependencies]
num-rational = "0.4"
serde = { version = "^1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "^1.0"
